# ezpz-evals

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-06-25-local-ui-redesign-design.md
examples/datasets/earnings_v1/: manifest.jsonl
examples/datasets/fake_invoices_v1/: manifest.jsonl
examples/datasets/fake_v1/: manifest.jsonl
examples/datasets/invoices_v1/: manifest.jsonl
examples/datasets/strategies_v1/: manifest.jsonl
examples/experiments/: claude_vs_gemini_vs_openai.yaml  document_sources.yaml  earnings.yaml  earnings_cascade.yaml  extend_vs_gemini_vs_llamaindex.yaml  fake_invoice_smoke.yaml  fake_smoke.yaml  local_ollama.yaml  strategies_demo.yaml
examples/tasks/: earnings_extraction.yaml  fake_extraction.yaml  fake_invoice.yaml  invoice_extraction.yaml  strategies_task.yaml
src/ezpz/: __init__.py  plugins.py
src/ezpz/adapters/: __init__.py  anthropic.py  base.py  extend.py  fake.py  gemini.py  llamaindex.py  llm_base.py  openai.py  registry.py
src/ezpz/cli/: __init__.py  main.py
src/ezpz/config/: __init__.py  dotenv.py  experiment.py
src/ezpz/core/: __init__.py  document.py  result.py  run.py  score.py  task.py  values.py
src/ezpz/engine/: __init__.py  aggregate.py  cache.py  cost.py  executor.py
src/ezpz/normalize/: __init__.py  canonical.py
src/ezpz/scorers/: __init__.py  _cache.py  base.py  date_match.py  embedding_similarity.py  exact.py  list_table.py  llm_judge.py  numeric_tolerance.py  presence.py  registry.py  string_similarity.py
src/ezpz/sources/: __init__.py  base.py  extend.py  langfuse.py  local.py  registry.py  s3.py
src/ezpz/store/: __init__.py  blobs.py  schema.sql  sqlite.py
src/ezpz/strategies/: __init__.py  (+4 more)
tests/: conftest.py  test_adapters_m3_m5.py  test_aggregate.py  test_cache.py  test_config.py  test_contracts.py  test_dotenv.py  test_executor.py  test_llm_adapters.py  test_m4_end_to_end.py  test_m7.py  test_normalize.py  test_openai_compatible.py  test_plugins.py  test_scorers.py  test_scorers_m4.py  test_self_rating.py  test_sources.py  test_store.py  test_strategies.py  test_ui_data.py  test_ui_launch.py  test_ui_server.py  test_ui_server_http.py
(+23 files in other folders)
