[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezpz-evals"
version = "0.0.1"
description = "Local-first eval harness for unstructured-document pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jon Moubayed" }]
keywords = ["evals", "llm", "document-extraction", "ocr", "structured-output", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/jonmoubayed/ezpz-evals"
Repository = "https://github.com/jonmoubayed/ezpz-evals"
Issues = "https://github.com/jonmoubayed/ezpz-evals/issues"

# Adapter integrations are optional and installed per tool.
# NOTE: verify exact package names/versions against current SDKs before pinning.
[project.optional-dependencies]
gemini = ["google-genai"]                 # Google GenAI SDK
anthropic = ["anthropic>=0.40"]           # Anthropic Claude SDK
openai = ["openai>=1.40"]                 # OpenAI SDK
extend = ["httpx>=0.27"]                  # REST adapter; swap for official SDK if available
llamaindex = ["llama-index>=0.11", "llama-index-llms-openai", "llama-parse"]
embeddings = ["numpy"]                     # for embedding-similarity scorer
ui = ["streamlit>=1.36", "pandas>=2"]
dev = ["pytest>=8", "ruff", "mypy", "types-PyYAML"]

[project.scripts]
ezpz = "ezpz.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ezpz"]

[[tool.mypy.overrides]]
# Optional adapter SDKs + the UI extra aren't installed in the base/dev env.
module = [
    "google.*", "anthropic.*", "openai.*", "httpx", "llama_index.*", "llama_parse",
    "streamlit.*", "pandas.*",
]
ignore_missing_imports = true
